--- a/Sejong/css/main.css
+++ b/Sejong/css/main.css
@@ -119,6 +119,10 @@ input {
   display: none;
 }
 
+header {
+  position: fixed;
+  width: 100%;
+}
 header .header_top {
   position: relative;
   display: flex;
@@ -182,6 +186,9 @@ header .header_top .wrapper .today_info .info_list li a {
   justify-content: center;
   height: 100%;
 }
+header .header_top .wrapper .today_info .info_list li span {
+  font-weight: 700;
+}
 header .header_top .wrapper .user_menu {
   display: flex;
   gap: 1.4em;
@@ -197,31 +204,61 @@ header .header_top .wrapper .user_menu li a {
   height: 100%;
 }
 header .header_bottom {
+  box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.05);
+  background: #fff;
   height: 90px;
 }
 header .header_bottom .logo a {
   display: flex;
+  align-items: center;
+  justify-content: center;
+  width: auto;
   height: 100%;
 }
-header .header_bottom .logo a i {
+header .header_bottom .logo a span {
   font-size: 0;
   line-height: 0;
 }
 header .header_bottom .wrapper {
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   height: 100%;
 }
 header .header_bottom .wrapper .gnb {
   display: flex;
+  height: 100%;
 }
 header .header_bottom .wrapper .gnb ul.depth1 {
   display: flex;
+  gap: 2.52em;
 }
 header .header_bottom .wrapper .gnb ul.depth1 li a {
   display: flex;
+  align-items: center;
+  justify-content: center;
   height: 100%;
+  font-size: 1.11rem;
+  font-weight: 700;
+  color: #1D1D1D;
+}
+header .header_bottom .wrapper .sitemap a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 1.17em;
+  height: 100%;
+}
+header .header_bottom .wrapper .sitemap a span {
+  width: 1.41rem;
+  height: 1.41rem;
+  background-position: center center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: relative;
+  font-size: 0;
+  line-height: 0;
+  background-image: url("data:image/svg+xml,%3Csvg width='28' height='18' viewBox='0 0 28 18' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M2 18C1.575 18 1.21875 17.8563 0.93125 17.5688C0.64375 17.2812 0.5 16.925 0.5 16.5C0.5 16.075 0.64375 15.7188 0.93125 15.4313C1.21875 15.1438 1.575 15 2 15H26C26.425 15 26.7812 15.1438 27.0687 15.4313C27.3562 15.7188 27.5 16.075 27.5 16.5C27.5 16.925 27.3562 17.2812 27.0687 17.5688C26.7812 17.8563 26.425 18 26 18H2ZM2 10.5C1.575 10.5 1.21875 10.3562 0.93125 10.0688C0.64375 9.78125 0.5 9.425 0.5 9C0.5 8.575 0.64375 8.21875 0.93125 7.93125C1.21875 7.64375 1.575 7.5 2 7.5H26C26.425 7.5 26.7812 7.64375 27.0687 7.93125C27.3562 8.21875 27.5 8.575 27.5 9C27.5 9.425 27.3562 9.78125 27.0687 10.0688C26.7812 10.3562 26.425 10.5 26 10.5H2ZM2 3C1.575 3 1.21875 2.85625 0.93125 2.56875C0.64375 2.28125 0.5 1.925 0.5 1.5C0.5 1.075 0.64375 0.71875 0.93125 0.43125C1.21875 0.14375 1.575 0 2 0H26C26.425 0 26.7812 0.14375 27.0687 0.43125C27.3562 0.71875 27.5 1.075 27.5 1.5C27.5 1.925 27.3562 2.28125 27.0687 2.56875C26.7812 2.85625 26.425 3 26 3H2Z' fill='%23555555'/%3E%3C/svg%3E%0A");
 }
 
 .number1 {
@@ -249,6 +286,7 @@ header .header_bottom .wrapper .gnb ul.depth1 li a {
   display: flex;
   width: 100%;
   height: 5.76em;
+  mix-blend-mode: darken;
 }
 .number1 .serach .serach_content input {
   width: 31.88em;
@@ -267,7 +305,7 @@ header .header_bottom .wrapper .gnb ul.depth1 li a {
   background-position: center center;
   background-size: contain;
 }
-.number1 .serach .serach_content button i {
+.number1 .serach .serach_content button span {
   font-size: 0;
   line-height: 0;
 }
@@ -323,16 +361,16 @@ header .header_bottom .wrapper .gnb ul.depth1 li a {
   display: flex;
 }
 .visual .visual_popup .swiper .swiper_nav .buntton_inner .prev {
-  width: 1.41em;
-  height: 1.41em;
+  width: 1.41rem;
+  height: 1.41rem;
   background-position: center center;
   background-size: contain;
   background-repeat: no-repeat;
   background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M11.4031 12.0031L15.3031 15.9031C15.4865 16.0865 15.5781 16.3198 15.5781 16.6031C15.5781 16.8865 15.4865 17.1198 15.3031 17.3031C15.1198 17.4865 14.8865 17.5781 14.6031 17.5781C14.3198 17.5781 14.0865 17.4865 13.9031 17.3031L9.30312 12.7031C9.20312 12.6031 9.13229 12.4948 9.09062 12.3781C9.04896 12.2615 9.02812 12.1365 9.02812 12.0031C9.02812 11.8698 9.04896 11.7448 9.09062 11.6281C9.13229 11.5115 9.20312 11.4031 9.30312 11.3031L13.9031 6.70313C14.0865 6.51979 14.3198 6.42812 14.6031 6.42812C14.8865 6.42812 15.1198 6.51979 15.3031 6.70313C15.4865 6.88646 15.5781 7.11979 15.5781 7.40312C15.5781 7.68646 15.4865 7.91979 15.3031 8.10312L11.4031 12.0031Z' fill='%235F6368'/%3E%3C/svg%3E%0A");
 }
 .visual .visual_popup .swiper .swiper_nav .buntton_inner .next {
-  width: 1.41em;
-  height: 1.41em;
+  width: 1.41rem;
+  height: 1.41rem;
   background-position: center center;
   background-size: contain;
   background-repeat: no-repeat;
@@ -340,14 +378,14 @@ header .header_bottom .wrapper .gnb ul.depth1 li a {
   transform: scaleX(-1);
 }
 .visual .visual_popup .swiper .swiper_nav .buntton_inner .stop {
-  width: 1.41em;
-  height: 1.41em;
+  width: 1.41rem;
+  height: 1.41rem;
   background-position: center center;
   background-size: contain;
   background-repeat: no-repeat;
   background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8 7V17' stroke='%23555555' stroke-width='2' stroke-linecap='round'/%3E%3Cpath d='M16 7V17' stroke='%23555555' stroke-width='2' stroke-linecap='round'/%3E%3C/svg%3E%0A");
 }
-.visual .visual_popup .swiper .swiper_nav .buntton_inner i {
+.visual .visual_popup .swiper .swiper_nav .buntton_inner span {
   font-size: 0;
   line-height: 0;
 }
