--- a/Sejong/scss/main.scss
+++ b/Sejong/scss/main.scss
@@ -98,6 +98,7 @@ header {
             display: flex;
             align-items: center;
             justify-content: space-between;
+            width: 100%;
             height: 100%;
             .gnb {
                 display: flex;
