--- a/Sejong/scss/main.scss
+++ b/Sejong/scss/main.scss
@@ -496,7 +496,7 @@ header {
     }
 }
 .number3 {
-    background-image: url(../images/);
+    background: url(../images/);
     .wrapper {
         h2 {
             .more {
