--- a/Sejong/css/main.css
+++ b/Sejong/css/main.css
@@ -846,9 +846,9 @@ footer {
 .number3 .wrapper .left_human {
   z-index: 2;
   position: absolute;
-  left: 0;
-  top: 20%;
-  width: 42%;
+  left: -10%;
+  top: -14%;
+  width: 45%;
   height: auto;
 }
 .number3 .wrapper .left_human img {
@@ -859,9 +859,9 @@ footer {
 .number3 .wrapper .right_human {
   z-index: 1;
   position: absolute;
-  right: 0;
-  top: 20%;
-  width: 30%;
+  right: -10%;
+  top: -20%;
+  width: 35%;
   height: auto;
 }
 .number3 .wrapper .right_human img {
