--- a/Sejong/scss/main.scss
+++ b/Sejong/scss/main.scss
@@ -318,9 +318,9 @@
         .left_human {
             z-index: 2;
             position: absolute;
-            left: 0;
-            top: 20%;
-            width: 42%;
+            left: -10%;
+            top: -14%;
+            width: 45%;
             height: auto;
             img {
                 width: 100%;
@@ -331,9 +331,9 @@
         .right_human {
             z-index: 1;
             position: absolute;
-            right: 0;
-            top: 20%;
-            width: 30%;
+            right: -10%;
+            top: -20%;
+            width: 35%;
             height: auto;
             img {
                 width: 100%;
