에어로케이 이미지 추가함
현재 문제 새로고침해야 하위메뉴 뜸

--- a/Aerok/css/main.css
+++ b/Aerok/css/main.css
@@ -325,7 +325,7 @@
     height: 200px;
     font-size: 0;
     line-height: 0;
-    border-radius: 0.58rem
+    border-radius: 0.58rem;
 }
 .travel .tab_content .tab_conts ul li a .photo img {
     width: 100%;
