--- a/rot/css/common.css
+++ b/rot/css/common.css
@@ -1,5 +1,5 @@
 body, html {
-    font-family: "Riasans","Pretendard",'NanumSquareNeo', '나눔스퀘어네오', '나눔고딕', NanumGothic, -apple-system, BlinkMacSystemFont, helvetica, "Apple SD Gothic Neo", sans-serif;
+    font-family:"Pretendard",'NanumSquareNeo', '나눔스퀘어네오', '나눔고딕', NanumGothic, -apple-system, BlinkMacSystemFont, helvetica, "Apple SD Gothic Neo", sans-serif;
     font-size: var(--body-m-default);
     font-weight: 400;
     color: var(--bdoy-color);
