--- a/Sejong/scss/__common.scss
+++ b/Sejong/scss/__common.scss
@@ -6,7 +6,7 @@ $h-L: 2.94rem;
 $h-m: 2.35rem;
 $h-s: 1.88rem;
 $title-XXL: 1.88rem;
-$title-XL: 1.47rem;
+$title-XL: 1.41rem;
 $title-L: 1.23rem;
 $title-m: 1.11rem;
 $title-s: 1rem;
@@ -30,6 +30,8 @@ $border:#c6c6c6;
 $bg-color-3:#F0F0F0;
 $bg-color:#fff;
 $bg-color-2: #F8F8F8;
+$footer:#343849;
+$footer-header:#3E4253;
 /*******/
 
 
