--- a/Sejong/scss/__var.scss
+++ b/Sejong/scss/__var.scss
@@ -1,14 +1,18 @@
 @mixin before-default{
     content: "";
     position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
     background-repeat: no-repeat;
     background-position: center center;
     background-size: contain;
 }
+@mixin after-default{
+    content: "";
+    position: absolute;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: contain;
+}
+
 @mixin header-drop_shadow {
     box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.05);
 }
@@ -60,4 +64,18 @@
     font-size: $title-XL;
     color: $title-color;
     font-weight: 700;
+}
+
+/* max width 정해줘야함 */
+@mixin text_hidden_2 {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+@mixin text_hidden_1 {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
