--- a/Sejong/scss/__font.scss
+++ b/Sejong/scss/__font.scss
@@ -8,7 +8,7 @@
 	font-family: "Pretendard";
 	font-weight: 400;
 	font-display: swap;
-	src: local('Pretendard Regular'), url(../fonts/Pretendard-Regular.woff2) format('woff2'), url(../fonts/Pretendard-Bold.woff) format('woff');
+	src: local('Pretendard Regular'), url(../fonts/Pretendard-Regular.woff2) format('woff2'), url(../fonts/Pretendard-Regular.woff) format('woff');
 }
 @font-face {
     font-family: "Riasans";
